Just commiting/saving this mess while testing it locally

--- a/docker/Dockerfile.webash
+++ b/docker/Dockerfile.webash
@@ -13,4 +13,4 @@ RUN /njs-deploy-travis/docker/entry.install.sh
 RUN /njs-deploy-travis/docker/entry.install.nvm.and.npm.sh 
 
 WORKDIR /njs-deploy-travis
-ENTRYPOINT [ "/njs-deploy-travis/docker/entry.run.sh" ]
+#ENTRYPOINT [ "/njs-deploy-travis/docker/entry.run.sh" ]
