--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,28 @@
 language: node_js
+dist: xenial
+
+branches:
+    only:
+    - master
+
+addons:
+    packages:
+        - docker
+
+stages:
+    - test
+    - ':build: and :push:'
+
+jobs:
+    include:
+    - stage: test
+        script: npm test
+    - stage: ':build: and :push:'
+        script: ./script/docker.build.push.sh
+
+deploy:
+    - provider: heroku
+    api_key: $HEROKU_API_KEY
+    app: njs-deploy-travis
+    on:
+        branch: master
