--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "njs-deploy-travis",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simples nodejs app to deploy with travis-ci.",
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.4.0",
+    "superagent": "^6.0.0",
+    "supertest": "^4.0.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./tests/jest.config.json"
   },
   "author": "Bernardo aka Pimptech",
   "license": "ISC"
