--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,11 @@ stages:
 jobs:
     include:
     - stage: test
-        script: npm test
+        script: bash ./scripts/build.test.image.sh
     - stage: ':build: and :push:'
-        script: ./script/docker.build.push.sh
-
-deploy:
-    - provider: heroku
-    api_key: $HEROKU_API_KEY
-    app: njs-deploy-travis
-    on:
-        branch: master
+        script: ./scripts/docker.build.push.sh
+        deploy:
+            provider: heroku
+            api_key: $HEROKU_API_KEY
+            app: njs-deploy-travis
+            on: master
