--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: node_js
+node_js:
+    - lts/*
 dist: xenial
 
 branches:
     only:
     - master
+
+if: branch = master and commit_message =~ /:ship:/
 
 stages:
     - test
