Changing build steps. nvm folder moved to .local on /home/pimptech. Trying this locally and then on travis.

--- a/docker/Dockerfile.webash
+++ b/docker/Dockerfile.webash
@@ -4,22 +4,23 @@ COPY . /njs-deploy-travis/
 
 RUN chmod +x /njs-deploy-travis/docker/entry.install.sh \
  && chmod +x /njs-deploy-travis/docker/entry.run.sh \
- && chmod +x /njs-deploy-travis/docker/run.tests.sh 
+ && chmod +x /njs-deploy-travis/docker/run.tests.sh
 
 RUN /njs-deploy-travis/docker/entry.install.sh \
- && mkdir -p $HOME/njs-deploy-travis/.nvm/.cache \
- && mkdir -p $HOME/njs-deploy-travis/.nvm/versions/node \
- && wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | NVM_DIR=$HOME/njs-deploy-travis/.nvm bash \
- && export NVM_DIR=$HOME/njs-deploy-travis/.nvm \
+ && mkdir -p $HOME/.local/.nvm/.cache \
+ && mkdir -p $HOME/.local/.nvm/versions/node \
+ && wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | NVM_DIR=$HOME/.local/.nvm bash \
+ #&& export NVM_DIR=$HOME/njs-deploy-travis/.nvm \
+ && export NVM_DIR=$HOME/.local/.nvm \
  && export NVM_NODEJS_ORG_MIRROR=https://unofficial-builds.nodejs.org/download/release \
  && export NVM_IOJS_ORG_MIRROR=http://no.iojs.download.com \
- && echo 'nvm_get_arch() { nvm_echo "x64-musl"; }' >> $HOME/njs-deploy-travis/nvm_arch_override.sh \
- && source $HOME/njs-deploy-travis/.nvm/nvm.sh \
- && source $HOME/njs-deploy-travis/nvm_arch_override.sh \
+ && echo 'nvm_get_arch() { nvm_echo "x64-musl"; }' >> $HOME/.local/.nvm/nvm_arch_override.sh \
+ && source $HOME/.local/.nvm/nvm.sh \
+ && source $HOME/.local/.nvm/nvm_arch_override.sh \
  && nvm install --lts \
  && nvm install --latest-npm \
  && cd njs-deploy-travis \
  && npm install
 
 WORKDIR /njs-deploy-travis
-#ENTRYPOINT [ "/njs-deploy-travis/docker/entry.run.sh" ]
+#ENTRYPOINT [ "./docker/entry.run.sh" ]
