--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,7 @@ jobs:
         api_key: $HEROKU_API_KEY
         app: njs-deploy-travis
         on: master
+
+script:
+    - npm install
+    - npm test
