--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ branches:
 
 if: branch = master and commit_message =~ /:ship:/
 
+install:
+    - npm install -g heroku
+    - npm install
+
 stages:
     - test
     - ':build: and :push:'
@@ -21,13 +25,6 @@ jobs:
     - stage: test
       script: bash ./scripts/build.test.image.sh
     - stage: ':build: and :push:'
-      script: bash ./scripts/docker.build.push.sh
-      deploy:
-        provider: heroku
-        api_key: $HEROKU_API_KEY
-        app: njs-deploy-travis
-        on: master
-
-script:
-    - npm install
-    - npm test
+      script: 
+        - bash ./scripts/docker.build.push.sh
+        - heroku container:release web -a njs-deploy-travis
